[package]
name = "gtone"
version = "0.1.0"
authors = ["divy-work <dj.srivastava23@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soundio = "0.2.1"
pitch = "0.1.3"
pitch-detection = "0.2.0"
